--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 
-<router-outlet></router-outlet>
+<nav class="navbar navbar-dark fixed-top bg-dark">
+    <a routerLink="movie-list" routerLinkActive="active">Movie Database</a>
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+</nav>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
